syntax = "proto3";

package infraboard.mcenter.permission;
option go_package = "github.com/infraboard/mcenter/apps/permission";

import "github.com/infraboard/mcube/pb/page/page.proto";

// RPC 权限查询API
service RPC {
	rpc QueryPermission(QueryPermissionRequest) returns(PermissionSet);
	rpc DescribePermission(DescribePermissionRequest) returns(Permission);
	rpc AddPermissionToRole(AddPermissionToRoleRequest) returns(PermissionSet);
	rpc RemovePermissionFromRole(RemovePermissionFromRoleRequest) returns(PermissionSet);
	rpc UpdatePermission(UpdatePermissionRequest) returns(Permission);
	rpc CheckPermission(CheckPermissionRequest) returns(Permission);
}

// EffectType 授权效力包括两种：允许（Allow）和拒绝（Deny）
enum EffectType {
    // 允许访问
    ALLOW = 0;
    // 拒绝访问
    DENY = 1;
}

// Permission 权限
message Permission {
    // id
    // @gotags: bson:"_id" json:"id"
    string id = 1;
    // 关联角色ID
    // @gotags: bson:"role_id" json:"role_id"
    string role_id = 2;
    // 创建时间
    // @gotags: bson:"create_at" json:"create_at"
    int64 create_at = 3;
    // 创建人
    // @gotags: bson:"creater" json:"creater"
    string creater = 4;
    // 效力
    // @gotags: bson:"effect" json:"effect"
    EffectType effect = 5;
    // 服务ID
    // @gotags: bson:"service_id" json:"service_id"
    string service_id = 6;
    // 资源列表
    // @gotags: bson:"resource_name" json:"resource_name"
    string resource_name = 7;
    // 维度
    // @gotags: bson:"label_key" json:"label_key"
    string label_key = 8;
    // 适配所有值
    // @gotags: bson:"match_all" json:"match_all"
    bool match_all = 9;
    // 标识值
    // @gotags: bson:"label_values" json:"label_values"
    repeated string label_values = 10; 
    // 范围, 角色范围限制, 由策略引擎动态补充
    // @gotags: bson:"-" json:"scope"
    string scope = 11;
    // 权限描述
    // @gotags: bson:"desc" json:"desc"
    string desc = 12;
}

// PermissionSet 用户列表
message PermissionSet {
    // @gotags: bson:"total" json:"total"
    int64 total = 1;
    // @gotags: bson:"items" json:"items"
    repeated Permission items = 2;
}

// QueryPermissionRequest 查询用户权限
message QueryPermissionRequest {
    // @gotags: json:"page"
   infraboard.mcube.page.PageRequest page = 1;
    // @gotags: json:"namespace"
    string namespace = 2;
    // @gotags: json:"username"
    string username = 3;
}

message CreatePermssionRequest {
    // 效力
    // @gotags: bson:"effect" json:"effect"
    EffectType effect = 1;
    // 服务ID
    // @gotags: bson:"service_id" json:"service_id"
    string service_id = 2;
    // 资源列表
    // @gotags: bson:"resource_name" json:"resource_name"
    string resource_name = 3;
    // 维度
    // @gotags: bson:"label_key" json:"label_key"
    string label_key = 4;
    // 适配所有值
    // @gotags: bson:"match_all" json:"match_all"
    bool match_all = 5;
    // 标识值
    // @gotags: bson:"label_values" json:"label_values"
    repeated string label_values = 6; 
}

// DescribeRoleRequest role详情
message DescribePermissionRequest {
    // @gotags: json:"id"
    string id = 1;
}

// CheckPermissionRequest todo
message CheckPermissionRequest {
    // @gotags: json:"page"
   infraboard.mcube.page.PageRequest page = 1;
    // @gotags: json:"namespace"
    string namespace = 2;
    // @gotags: json:"endpoint_id"
    string endpoint_id = 3;
    // @gotags: json:"service_id"
    string service_id = 4;
    // @gotags: json:"path"
    string path = 5;
    // @gotags: json:"username"
    string username = 6;
}

message AddPermissionToRoleRequest {
    // 创建者ID
     // @gotags: json:"create_by" validate:"required"
     string create_by = 3; 
     // @gotags: json:"role_id" validate:"required,lte=64"
     string role_id = 1;
     // @gotags: json:"permissions" validate:"required"
     repeated CreatePermssionRequest permissions = 2;
 }

 message RemovePermissionFromRoleRequest {
    // @gotags: json:"role_id" validate:"required,lte=64"
    string role_id = 1;
    // @gotags: json:"remove_all"
    bool remove_all = 2;
    // @gotags: json:"permission_id"
    repeated string permission_id = 3;
}

message UpdatePermissionRequest {
    // permission id
    // @gotags: json:"id" validate:"required,lte=64"
    string id = 1;
    // 维度
    // @gotags: json:"label_key"
    string label_key = 2;
    // 适配所有值
    // @gotags: json:"match_all"
    bool match_all = 3;
    // 标识值
    // @gotags: json:"label_values"
    repeated string label_values = 4;     
}